Update website fonts to Lato and Montserrat with specific weights and customizer options

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -11,9 +11,11 @@
   "current": {
     "logo": "shopify://shop_images/gls-logo-header.webp",
     "favicon": "shopify://shop_images/GLS_Favicon_c20f1874-7ad9-4e32-8bbb-2c68274225d8.webp",
-    "type_header_font": "poppins_n7",
+    "type_header_font": "lato_n9",
+    "type_header_secondary_font": "montserrat_n6",
     "heading_scale": 100,
-    "type_body_font": "poppins_n4",
+    "type_body_font": "montserrat_n4",
+    "type_button_font": "montserrat_n5",
     "body_scale": 100,
     "page_width": 1400,
     "spacing_sections": 36,
